--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
             max-width: 940px;
             width: 90%;
             margin: 0 auto;}
+    
+        
 
         img {
     max-width: 100%;
@@ -12,12 +14,13 @@
             background-color: white;
             width: 110px;
             position: relative;
-            border: 2px solid #A50010;
+            margin-left: 10px;
+            border: 1px solid #A50010;
             }
 
         nav {
             background-color: #A5BAEA;
-            font-size: 1.2em;
+            font-size: 1.1em;
             }
         nav > ul {
             list-style: none;
@@ -31,7 +34,7 @@
         nav li {
             flex: 1 1 4em;
             text-align: center;
-            font-family: segoe print;
+            font-family: 'Bungee', cursive;
             margin: 1px;
         }
 
@@ -42,6 +45,7 @@
 
         nav a {
             display: block;
+            color: aliceblue;
         }
 
         nav a:hover {
@@ -51,6 +55,9 @@
      
         .fullwidth {
             width: 100%
+        }
+        #banner-div {
+            margin-top: -20px;
         }
         
 #section1, #section2 {
@@ -75,6 +82,24 @@
             background-color: #A5BAEA;
             height: auto;
             border: .5px solid #A50010;}
+
+.river-subtopic {
+    display: flex;
+    height: 300px;
+    margin: 1%;
+    width: 31.3%;
+    min-width: 200px;
+    flex-flow: row wrap;
+
+
+}
+
+#riverdivs {
+    align-items: center;
+    background-color: #A5BAEA;
+    height: 300px;
+    border: .5px solid #A50010;
+}
         
         
         #title {
