--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
         nav li {
             flex: 1 1 4em;
             text-align: center;
-            font-family: 'Bungee', cursive;
+            font-family: 'Sriracha', cursive;
             margin: 1px;
         }
 
@@ -64,6 +64,12 @@
     display: flex;
     flex-flow: row wrap;
     align-items: center;
+}
+.riversection {
+    padding: 10px;
+    height: auto;
+    border: .8px solid #A50010;
+    margin-top: 10px;
 }
 
 .leftcol, .rightcol {
@@ -107,8 +113,8 @@
         
         h1,h2,h3,h4,h5,h6 {
             color: #A50010;
-            font-family: forte, serif;
-            font-size: auto;}
+            font-family: 'Sriracha', cursive;       
+            font-size: 2.8vw;}
         
         #nav-list {
             color: white;}
@@ -122,6 +128,7 @@
         }
 
         p {
-            font-family: Segoe Print; }
+            font-family: 'Rancho', cursive;
+            font-size: 2.5vw}
     
     
