--- a/style.css
+++ b/style.css
@@ -122,6 +122,32 @@
         
         #our-invitation-segment {
             text-align: center;}
+#aboutus {
+    background-color: #FAFE8D;
+    width: 63%;
+    position: relative;
+    top: -775px;
+    text-align: center;
+    padding-left: 5px;
+    padding-right: 5px;
+    border: 3px solid #A50010;
+}
+
+#raftingjpg {
+   width: 65%
+    
+}
+
+.contact_us_box {
+    width: 25%;
+    height: 175px;
+    text-align: center;
+    position: relative;
+    left: 75%;
+    top: -405px;
+    margin-bottom: 15px;
+    border: 4px solid #A50010;
+}
 
         .footer {
             text-align: center;
